<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wifi"
        android:summary="@string/wifi_summary"
        android:title="@string/wifi_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hints"
        android:summary="@string/hints_summary"
        android:title="@string/hints_title"/>
    <PreferenceCategory
        android:title="Настройки шрифта">

        <EditTextPreference
            android:key="test_size"
            android:title="Размер шрифта"
            android:summary="Устанавливает новый размер шрифта"
            android:defaultValue="14"
            android:dialogTitle="Введите размер шрифта (от 10 до 32)" />
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="Выберите стиль для шрифта"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:key="pref_style"
            android:summary="Устанавливает стиль для шрифта"
            android:title="Стиль для шрифта" />
    </PreferenceCategory>
    <PreferenceScreen
        android:key="text_color"
        android:title="Цвет текста"
        android:summary="Устанавливает цвет для текста">

        <CheckBoxPreference
            android:key="text_color_black"
            android:title="Черный"
            android:defaultValue="true"
            android:summary="Устанавливает черный цвет" />
        <CheckBoxPreference
            android:key="text_color_red"
            android:title="Красный"
            android:summary="Устанавливает красный цвет" />
        <CheckBoxPreference
            android:key="text_color_green"
            android:title="Зеленый"
            android:summary="Устанавливает зеленый цвет" />
        <CheckBoxPreference
            android:key="text_color_blue"
            android:title="Синий"
            android:summary="Устанавливает синий цвет" />
    </PreferenceScreen>
    <PreferenceCategory android:title="Настройки кота">
        <CheckBoxPreference
            android:key="cat_key"
            android:title="У вас есть кот?"
            android:summary="Доступно для владельцев котов"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="catfood"
            android:title="Подарки для кота"
            android:summary="Угости кота"
            android:dependency="cat_key" />
        <SwitchPreference
            android:key="glad"
            android:summaryOff="Вы уверены, что не будете гладить кота?"
            android:summaryOn="Гладить кота?"
            android:switchTextOff="Нет"
            android:switchTextOn="Да" />
        <com.example.hellokitty.SeekBarDialogPreference
            android:defaultValue="20"
            android:dialogMessage="Выберите нужное значение:"
            android:key="height"
            android:max="50"
            android:summary="Высота кота в см"
            android:title="Рост кота"
            custom:min="1"
            custom:progressTextSuffix=" см" />
        <com.example.hellokitty.NumberPickerDialogPreference
            android:defaultValue="200"
            android:dialogMessage="Выберите суточный паёк для кота в граммах:"
            android:max="250"
            android:title="Печёнка для кота (гр)"
            custom:min="100" />
    </PreferenceCategory>

</PreferenceScreen>